apps/heimdall/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:2.4.12
        ports:
          - containerPort: 80
        volumeMounts:
          - name: heimdall-config-vol
            mountPath: /config
      volumes:
      - name: heimdall-config-vol
        persistentVolumeClaim:
          claimName: heimdall-config-pvc
