apps/heimdall/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    app: heimdall
  type: ClusterIP
  ports:
  - name: http
    port: 80
